[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devin-audit-test"
version = "0.1.0"
description = "Audit and testing system for Devin"
authors = [{name = "Devin AI", email = "devin-ai-integration@users.noreply.github.com"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
